--- a/index.ipynb
+++ b/index.ipynb
@@ -315,11 +315,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Albuquerque', 'Country': 'USA', 'Population': 559, 'Area': 491}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "salina = None \n",
+    "salina = cities[3] \n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
